cmake_minimum_required(VERSION 3.9)
project(wet2_3aaa889aced006a6290317e78df1c117d5d37472)

set(CMAKE_CXX_STANDARD 11)

add_executable(wet2_3aaa889aced006a6290317e78df1c117d5d37472
        avltree.h
        clan.cpp
        clan.h
        comperators.h
        hashTable.cpp
        hashTable.h
        library2.cpp
        library2.h
        list.h
        main2.cpp
        minHeap.h
        oasis.cpp
        oasis.h
        player.cpp
        player.h)
