cmake_minimum_required(VERSION 3.6)
project(HW3_3)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
add_executable(HW3_3
        avltree.h
        clan.cpp
        clan.h
        comperators.h
        hashTable.cpp
        hashTable.h
        library2.cpp
        library2.h
        list.h
        minHeap.h
        oasis.cpp
        oasis.h
        player.cpp
        player.h
        main.cpp)